--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 .row{
     display: flex;
     flex-flow: row wrap;
+    padding: 0 0 50px;
     justify-content: space-between;
     align-items: stretch;
 }
@@ -14,23 +15,25 @@
     flex-grow: 1;
 }
 .card{
-    margin: 10px;
+    margin: 0 10px;
     padding:20px;
-    background-color: #F03D68;
+    background-color: #EAFBD7;
     border-radius: 10px;
     text-align: center;
-    color: white;
+    color: #6A9440;
     -webkit-box-shadow: 5px 5px 4px 0px #B8B8B8; 
     box-shadow: 5px 5px 4px 0px #B8B8B8;
     
 }
 .card.syan{
-    background-color: #17A9B6;
+    background-color: #6A9440;
+    color: #fff;
 }
 
-h1{
+h2.heading{
     text-align: center;
-    padding: 20px;
+   
     font-size: 45px;
     font-weight: 600;
+    color: #6A9440;
 }
