--- a/css/style.css
+++ b/css/style.css
@@ -30,10 +30,22 @@
     color: #fff;
 }
 
-h2.heading{
+.card img{
+    height: 250px;
+    width: 500px;
+    object-fit: cover;
+}
+.card ol{
+    text-align: justify;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.5em;
+}
+.heading{
     text-align: center;
-   
-    font-size: 45px;
+    font-size: 35px;
     font-weight: 600;
     color: #6A9440;
+    width: 800px;
+    margin: 0 auto;
 }
